--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@ License: https://webthemez.com/license
         <div class="section-header">
           <h2>Our Team</h2>
         </div>
-        <div class="row">
-           <div class="col-lg-4 col-md-12">
+        <div class="row display-flex justify-content-center">
+           <div class="col-lg-3 col-md-9">
             <div class="member">
               <div class="pic"><img src="img/sheesh2.png" alt=""></div>
               <div class="details">
@@ -481,7 +481,7 @@ License: https://webthemez.com/license
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-12">
+          <div class="col-lg-3 col-md-9">
             <div class="member">
               <div class="pic"><img src="img/balbeer1.png" alt=""></a></div>
               <div class="details">
@@ -498,7 +498,7 @@ License: https://webthemez.com/license
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-12">
+          <div class="col-lg-3 col-md-9">
             <div class="member">
               <div class="pic"><img src="img/ankit.png" alt=""></div>
               <div class="details">
